crates/lang/macro/tests/ui/trait_def/fail/message_async_invalid.stderr
error: async ink! trait methods are not supported
 --> $DIR/message_async_invalid.rs:6:5
  |
6 |     async fn message_ref(&self);
  |     ^^^^^
